chore(app):background from body to content/fix(app):fix background distortion/feature(app):add content animate

--- a/app/app.sass
+++ b/app/app.sass
@@ -5,51 +5,54 @@ html
   width: 100%;
 
 body
-  background: #000 url('http://i.imgur.com/Fbu28kR.jpg')  no-repeat;
-  background-size: 100% 100%;
+  background: #000; 
   height: 100%;
   margin: 0;
   width: 100%;
 
+#content
+  background: url('http://i.imgur.com/Fbu28kR.jpg') no-repeat;
+  background-position: 48% 50%;
+  background-size: cover;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  transition: all 0.6s ease-in-out;
+  width: 100%;
+  
   &::after
     content: "";
     background-color: rgba(68,63,70,0.9);
     height: 100%;
     left: 0;
-    position: fixed;
+    position: absolute;
     top: 0;
     transition: all ease-in-out 0.6s
     width: 100%
-    z-index: -100;
-
-#content
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  width: 100%;
 
 //portrait
 body[data-orientation="portrait"]
   #content
     background-color: rgba(68,63,70,0.9);
-  
+    
+    &::after
+      width: 100%!important;
+
   &[data-status="list"]
     #content  
       height: 80%;
       left: 35%;
       top: 10%;
       width: 65%;
-
+      
     #menu
       transform: translateX(0);
 
   .page
     padding: 0;
-
-  &::after
-    width: 100%!important;
-
+  
   #landing
     & >.title
       font-size: 5vw;
@@ -71,7 +74,7 @@ body[data-orientation="portrait"]
     transform: translateX(-100%);
     transition: all 0.6s;
 
-    >li
+    >div
       display: block!important;
       font-size: 3.5vw;
       margin: 5vh 0;
@@ -193,7 +196,7 @@ body[data-orientation="portrait"]
   transform: translate(-50%,-50%);
   z-index: 100;
 
-  &>li
+  >div
     border-bottom-color: rgba(226, 219, 26, 0);
     color: #fff;
     cursor: pointer;
@@ -213,11 +216,12 @@ body[data-orientation="portrait"]
 // landing page
 
 body[data-content="landing"]
+  #content
+    &::after
+      width: 43%;
+
   #landing
     opacity: 1;
-    
-  &::after
-    width: 43%;
 
 #landing
   display: block;
